--- a/build.xml
+++ b/build.xml
@@ -46,7 +46,6 @@
     <property name='img.dir' value='${web.dir}/img'/>
 
     <property name='webinf.dir' value='${web.dir}/WEB-INF'/>
-    <property name='webinf.lib.dir' value='${webinf.dir}/lib'/>
 
     <!-- output dirs relative to application being built -->
     <property name='build.dir' value='${zwc.basedir}/build'/>
@@ -79,19 +78,12 @@
     <property name="compress.ext" value='.zgz'/>
     <property name='compresserror.ext' value='.err'/>
 
-    <!-- ZIMBRA FIREFOX EXTENSION -->
-    <property name="ffext.jarfile" value="zimbradnd.jar"/>
-    <property name="ffext.xpifile" value="ZimbraDnD.xpi"/>
-    <property name="ffext.build.dir" location="ffext/build"/>
-    <property name="ffext.src.dir" value="ffext/src/zimbradnd"/>
+        <!-- THIRDPARTY INTEGRATION -->
+    <property name="3rdparty.dir" value="${build.js.dir}/ajax/3rdparty" />
 
-    <!-- MODERNIZR INTEGRATION -->
-    <property name="modernizr.version" value="2.6.1"/>
-    <property name="modernizr.dir" value="${build.js.dir}/ajax/3rdparty/modernizr"/>
-
-    <!-- jQuery INTEGRATION -->
+    <property name="modernizr.version" value="2.8.3"/>
+    <property name="yui.version" value="2.7.0"/>
     <property name="jquery.version" value="1.11.0"/>
-    <property name="jquery.dir" value="${build.js.dir}/ajax/3rdparty/jquery"/>
 
 	<!-- customize admin skin -->
 	<if>
@@ -136,47 +128,7 @@
         <property name='common.build.web.excludes'
                   value='${custom.build.web.excludes},js/*${depends.ext},js/*${nodebug.ext},js/*${jsmin.ext},js/*${license.ext}'/>
         <property name='common.webinf.includes' value='${custom.webinf.includes},**'/>
-        <property name='common.webinf.excludes' value='${custom.webinf.excludes},web.*,lib/**'/>
-    </target>
-
-    <target name='ajax' depends='common'>
-        <property name='build.ajax' value='true'/>
-        <property name='deploy.app' value='ajax'/>
-        <property name='skins.dir' value='${web.dir}/skins'/>
-        <property name='web.includes' value='js/ajax/**,css/**,js/zimbraAdmin/**/*AutoComplete*.js'/>
-        <property name='web.excludes' value='WEB-INF/classes/**'/> <!-- default Eclipse output dir -->
-        <property name='jsp.includes' value='frameOpenerHelper.jsp'/>
-        <property name='jsp.excludes' value=''/>
-        <property name='img.includes' value='dwt/**'/>
-        <property name='img.excludes' value='${common.img.excludes}'/>
-        <property name='template.includes' value='dwt/**/*.template'/>
-        <property name='template.excludes' value=''/>
-        <property name='jam.includes' value='**/ajax/package/*.js'/>
-        <property name='jam.excludes' value=''/>
-        <property name='build.web.includes'
-                  value='js/**,img/dwt.gif,img/images.css,skin/**,public/**,templates/**'/>
-        <property name='build.web.excludes' value='${common.build.web.excludes}'/>
-        <property name='webinf.includes' value=''/>
-        <property name='webinf.excludes' value='**'/>
-    </target>
-
-    <target name='client' depends='common'>
-        <property name='deploy.app' value='zimbra'/>
-        <property name='skins.dir' value='${web.dir}/skins'/>
-        <property name='web.includes' value='${common.web.includes},h/**,m/**,portals/**,sounds/**,test/**,yui/2.7.0/**,qunit/**'/>
-        <property name='web.excludes' value='${common.web.excludes},js/zimbraAdmin/**'/>
-        <property name='jsp.includes' value='${common.jsp.includes}'/>
-        <property name='jsp.excludes' value='${common.jsp.excludes},admin.jsp'/>
-        <property name='img.includes' value='${common.img.includes}'/>
-        <property name='img.excludes' value='${common.img.excludes},admin/**'/>
-        <property name='template.includes' value='${common.template.includes}'/>
-        <property name='template.excludes' value='${common.template.excludes},admin/**'/>
-        <property name='jam.includes' value='${common.jam.includes}'/>
-        <property name='jam.excludes' value='${common.jam.excludes},**/zimbraAdmin/**'/>
-        <property name='build.web.includes' value='${common.build.web.includes}'/>
-        <property name='build.web.excludes' value='${common.build.web.excludes}'/>
-        <property name='webinf.includes' value='${common.webinf.includes}'/>
-        <property name='webinf.excludes' value='${common.webinf.excludes}'/>
+        <property name='common.webinf.excludes' value='${custom.webinf.excludes},web.*'/>
     </target>
 
     <target name='admin' depends='common'>
@@ -184,20 +136,19 @@
         <property name='deploy.app' value='zimbraAdmin'/>
         <property name='skins.dir' value='${web.dir}/admin_skins'/>
         <property name='web.includes' value='${common.web.includes},yui/2.7.0/**'/>
-        <property name='web.excludes' value='${common.web.excludes},js/zimbraMail/**'/>
+        <property name='web.excludes' value='${common.web.excludes}'/>
         <property name='jsp.includes' value='${common.jsp.includes}'/>
-        <property name='jsp.excludes'
-                  value='${common.jsp.excludes},launchNewWindow.jsp,login.jsp,*Mail.jsp,*ZCS.jsp,Spreadsheet*'/>
-        <property name='img.includes' value='admin/**,animated/**,dwt/**,logo/favicon.ico'/>
+        <property name='jsp.excludes' value='${common.jsp.excludes}'/>
+        <property name='img.includes' value='admin/**,logo/favicon.ico'/>
         <property name='img.excludes' value='${common.img.excludes}'/>
         <property name='template.includes' value='admin/**,dwt/**,zimbra/**'/>
         <property name='template.excludes' value='${common.template.excludes}'/>
          <property name='jam.includes' value='${common.jam.includes}'/>  
-        <property name='jam.excludes' value='${common.jam.excludes},**/zimbraMail/**'/>
+        <property name='jam.excludes' value='${common.jam.excludes}'/>
         <property name='build.web.includes' value='${common.build.web.includes}'/>
         <property name='build.web.excludes' value='${common.build.web.excludes}'/>
         <property name='webinf.includes' value='${common.webinf.includes}'/>
-        <property name='webinf.excludes' value='${common.webinf.excludes},tags/**,tlds/**'/>
+        <property name='webinf.excludes' value='${common.webinf.excludes}'/>
     </target>
 
     <target name='dev'>
@@ -212,56 +163,36 @@
     </target>
     
     <target name="war"
-            depends="resolve,init,images,styles,settings,copy-ajax,jam-files,compress"
+            depends="resolve,init,images,styles,copy-ajax,jam-files,compress"
             description="Builds all dependencies and assembles the war file.">
         <antcall target="assemble-war"/>
     </target>
 
     <target name="copy-ajax">
-
-        <sync todir="${js.dir}">
+        <sync todir="${build.js.dir}">
             <fileset dir="${ajax.dir}/${js.dir}"/>
             <preserveintarget>
                 <include name="**"/>
             </preserveintarget>
         </sync>  
 
-        <mkdir dir='${keys.dir}'/>
-         <sync todir="${web.dir}/keys">
+         <sync todir="${build.dir}/keys">
             <fileset dir="${ajax.dir}/${web.dir}/keys"/>
             <preserveintarget>
                 <include name="**"/>
             </preserveintarget>
         </sync>
         
-        <sync todir="${web.dir}/messages">
+        <sync todir="${build.dir}/messages">
             <fileset dir="${ajax.dir}/${web.dir}/messages"/>
             <preserveintarget>
                 <include name="**"/>
             </preserveintarget>
         </sync>
 
-         <sync todir="${web.dir}/jquery">
-            <fileset dir="${ajax.dir}/${web.dir}/jquery"/>
-            <preserveintarget>
-                <include name="**"/>
-            </preserveintarget>
-        </sync>
-
-        <sync todir="${web.dir}/modernizr">
-            <fileset dir="${ajax.dir}/${web.dir}/modernizr"/>
-            <preserveintarget>
-                <include name="**"/>
-            </preserveintarget>
-        </sync>
-
-        <sync todir="${web.dir}/yui">
-            <fileset dir="${ajax.dir}/${web.dir}/yui"/>
-            <preserveintarget>
-                <include name="**"/>
-            </preserveintarget>
-        </sync>
-        
+        <antcall target="jquery" />
+        <antcall target="modernizr" />
+        <antcall target="yui" />
     </target>
 
     <target name="assemble-war" depends="webxml-package-replace, resolve" description="Assembles the war file.  Assumes that all dependencies have been built.  Octopus/ZimbraWebClient/build.xml calls the war target, modifies files in ZimbraWebClient/build, and then calls this target.">
@@ -291,6 +222,7 @@
             <classes refid="overlay.src.props.fileset" />
             <classes refid="src.props.fileset" />
             <classes refid="overlay.messages.fileset" />
+            <classes refid="ajax.messages.fileset" />
             <classes refid="messages.fileset" />
 
             <lib dir="${build.tmp.dir}" includes="*.jar"/>
@@ -319,7 +251,7 @@
         <delete dir="${build.tmp.dir}"/>
     </target>
 
-    <target name='sync' depends='init,resolve,jquery,modernizr,templates'>
+    <target name='sync' depends='init,resolve,copy-ajax,templates'>
         <!-- NOTE: Keep order in sync with list of war filesets. -->
         <copy todir='${webapp.dir}/WEB-INF' verbose='${sync.verbose}'>
             <fileset refid="webinf.fileset" />
@@ -330,6 +262,7 @@
         <copy todir='${webapp.dir}/WEB-INF/classes' verbose='${sync.verbose}'>
             <fileset refid="src.props.fileset" />
             <fileset refid="overlay.src.props.fileset" />
+            <fileset refid="ajax.messages.fileset" />
             <fileset refid="messages.fileset" />
             <fileset refid="overlay.messages.fileset" />
             <fileset dir='${build.classes.dir}' excludes='**/build/**'/> 
@@ -411,11 +344,6 @@
             <isset property="build.prod"/>
         </condition>
 
-
-        <condition property='external.done' value='true'>
-            <available file="${taglib.build.dir}/zimbrataglib.jar"/>
-        </condition>
-
         <!-- deployment properties -->
         <tstamp/>
 
@@ -459,6 +387,7 @@
                  dir='${overlay.dir}/${img.dir}' includes='${img.includes}' excludes='${img.excludes}' />
 
         <fileset id="messages.fileset" dir='${web.dir}' includes='messages/**,keys/**' />
+        <fileset id="ajax.messages.fileset" dir='${build.dir}' includes='messages/**,keys/**' />
         <fileset id="overlay.messages.fileset" erroronmissingdir="false"
                  dir='${overlay.dir}/${web.dir}' includes='messages/**,keys/**' />
 
@@ -475,6 +404,7 @@
                  dir='${overlay.dir}/${template.dir}' includes='**/*.template' />
 
         <fileset id="package.fileset" dir='${js.dir}' includes='${jam.includes}' excludes='${jam.excludes}' />
+        <fileset id="ajax.package.fileset" dir='${build.js.dir}' includes='${jam.includes}' excludes='${jam.excludes}' />
         <fileset id="overlay.package.fileset" erroronmissingdir="false"
                  dir='${overlay.dir}/${js.dir}' includes='${jam.includes}' excludes='${jam.excludes}' />
 
@@ -923,38 +853,14 @@
         </copy>
     </target>
 
-    <target name='settings' depends='init'>
-        <if>
-            <and>
-                <not>
-                    <isset property='build.ajax'/>
-                </not>
-                <not>
-                    <isset property='build.admin'/>
-                </not>
-            </and>
-            <then>
-                <property name='settings.dir' value='${build.js.dir}/zimbraMail/share/model'/>
-                <property name='settings.file' value='${settings.dir}/ZmSettings.js'/>
-
-                <mkdir dir='${settings.dir}'/>
-                <copy todir='${settings.dir}' flatten='true'>
-                    <fileset dir='${js.dir}' includes='**/ZmSettings.js'/>
-                </copy>
-                <replace file="${settings.file}" token="@buildVersion@" value="${zimbra.buildinfo.version}"/>
-                <replace file="${settings.file}" token="@buildRelease@" value="${zimbra.buildinfo.release}"/>
-                <replace file="${settings.file}" token="@buildDateTime@" value="${DSTAMP}-${TSTAMP}"/>
-            </then>
-        </if>
-    </target>
-
-    <target name='jam-files' depends='jquery,modernizr,templates'>
+    <target name='jam-files' depends='templates'>
         <property name='jam.jsp.dir' value='${build.web.dir}/public/jsp'/>      
         <mkdir dir='${build.js.dir}'/>
         <mkdir dir='${jam.jsp.dir}'/>
 
         <copy todir='${build.js.dir}' flatten='true'>
             <fileset refid='package.fileset' />
+            <fileset refid='ajax.package.fileset' />
             <fileset refid='overlay.package.fileset' />
             <fileset refid='customer.package.fileset' />
         </copy>
@@ -1099,7 +1005,7 @@ ext = BeanUtils.cook(ext);
 	    />
 
         <!-- copying yui jar file in build/tmp directory. -->
-        <ivy:install organisation="com.yahoo.platform.yui" module="yuicompressor" revision="2.4.2-zimbra" settingsRef="dev.settings" from="chain-resolver" to="build-tmp" overwrite="true" transitive="true" type="jar"/>
+        <ivy:install organisation="com.yahoo.platform.yui" module="yuicompressor" revision="2.4.8" settingsRef="dev.settings" from="chain-resolver" to="build-tmp" overwrite="true" transitive="true" type="jar"/>
 
 
         <!-- minimize js, prepend copyright, compress -->
@@ -1130,7 +1036,7 @@ ext = BeanUtils.cook(ext);
                         <echo>Minimizing to @{var}${jsmin.ext}</echo>
 	                    <try>
 	                        <block>
-                                <java jar="${build.tmp.dir}/yuicompressor-2.4.2-zimbra.jar" fork="true" failonerror="true"
+                                <java jar="${build.tmp.dir}/yuicompressor-2.4.8.jar" fork="true" failonerror="true"
 		                              output="${build.dir}/yui-compress.out">
                                     <!-- Add error="@{var}${compresserror.ext}" in java task if *.err files need to be generated. -->
 		                            <arg value="--line-break"/>
@@ -1155,7 +1061,11 @@ ext = BeanUtils.cook(ext);
                         <echo>Prepending Copyright to @{var}${license.ext}</echo>
                         <concat destfile="@{var}${license.ext}" fixlastline="true">
                             <header filtering="no" trimleading="yes">
-                                /* Copyright (C) 2005-2009 Zimbra Inc. http://www.zimbra.com/ */
+                                /*
+                                 * Zimbra Collaboration Suite Web Client
+                                 * Copyright (C) 2004-2017 Synacor, Inc.
+                                 * https://www.zimbra.com/license
+                                 */
                             </header>
                             <fileset file='@{var}${jsmin.ext}'/>
                         </concat>
@@ -1181,7 +1091,7 @@ ext = BeanUtils.cook(ext);
 		<for list="${files}" param="filename">
 			<sequential>
 				<echo>Testing file: @{filename}</echo>
-                <java jar="${build.tmp.dir}/yuicompressor-2.4.2-zimbra.jar" fork="true" failonerror="true">
+                <java jar="${build.tmp.dir}/yuicompressor-2.4.8.jar" fork="true" failonerror="true">
 				    <arg value="--line-break"/>
 				    <arg value="0"/>
 				    <arg value="--type"/>
@@ -1265,22 +1175,6 @@ ext = BeanUtils.cook(ext);
     <target name='clean' depends='customer-init'>
         <delete dir='${build.dir}'/>
         <delete dir='${customer.build.dir}'/>
-        <delete dir='${web.dir}/jquery'/>
-        <delete dir='${web.dir}/modernizr'/>
-        <delete dir='${web.dir}/yui'/>
-        <delete dir='${web.dir}/js/ajax'/>
-        <delete dir='${web.dir}/js/zimbra'/>
-        <delete>
-            <fileset dir="${web.dir}/keys">
-                <include name="Ajx*.properties"/>
-            </fileset>
-        </delete>
-        <delete>
-            <fileset dir="${web.dir}/messages">
-                <include name="Ajx*.properties"/>
-                <include name="I18n*.properties"/>
-            </fileset>
-        </delete>
     </target>
 
 	<!-- JavaScript API Documentation Tasks -->
@@ -1424,13 +1318,6 @@ ext = BeanUtils.cook(ext);
         <!-- noop='true'/-->
     </target>
 
-    <!-- HTML CLIENT TARGETS -->
-    <target name='server-war'>
-        <ant dir='${server.dir}' target='war'/>
-    </target>
-    <target name='deploy-html' depends='server-war,deploy'/>
-    <target name='sync-html' depends='sync' />
-
     <!-- LEGACY TARGETS -->
     <target name='admin-dev-sync' depends='admin,sync'>
         <antcall target='restart-webserver'/>
@@ -1439,22 +1326,11 @@ ext = BeanUtils.cook(ext);
     <target name='admin-dev-war' depends='admin,war'/>
     <target name='admin-deploy' depends='admin,deploy'/>
     <target name='admin-prod-deploy' depends='admin,prod,deploy'/>
-    <target name='ajax-prod-war' depends='ajax,prod,war'/>
 
     <target name='restart-webserver'>
         <exec executable="zmmailboxdctl">
             <arg value="restart"/>
         </exec>
-    </target>
-
-    <!-- ZIMBRA FIREFOX EXTENSION -->
-    <target name="ffext-reset-the-world">
-        <delete dir="${ffext.build.dir}"/>
-        <mkdir dir="${ffext.build.dir}/chrome"/>
-        <copy file="${ffext.src.dir}/chrome.manifest" todir="${ffext.build.dir}"/>
-        <copy file="${ffext.src.dir}/install.rdf" todir="${ffext.build.dir}"/>
-        <zip destfile="${ffext.build.dir}/chrome/${ffext.jarfile}" basedir="${ffext.src.dir}/chrome/zimbradnd"/>
-        <zip destfile="${ffext.build.dir}/${ffext.xpifile}" basedir="${ffext.build.dir}"/>
     </target>
 
     <!-- JSP PRECOMPILE STUFF -->
@@ -1498,12 +1374,36 @@ ext = BeanUtils.cook(ext);
         </delete>
     </target>
 
-    <target name="modernizr">
-        <copy todir='${modernizr.dir}' file='${web.dir}/modernizr/${modernizr.version}/modernizr.js' verbose='${sync.verbose}'/>
+    <!-- JQUERY Library -->
+    <target name="jquery" depends="resolve">
+        <ivy:install organisation="org.webjars" module="jquery" revision="${jquery.version}" settingsRef="dev.settings" from="chain-resolver" to="build-tmp" overwrite="true" transitive="true" />
+
+        <unzip src="${build.tmp.dir}/jquery-${jquery.version}.jar" dest="${build.tmp.dir}/jquery" overwrite="true" />
+
+        <copy todir="${3rdparty.dir}/jquery">
+            <fileset dir="${build.tmp.dir}/jquery/META-INF/resources/webjars/jquery/${jquery.version}" />
+        </copy>
     </target>
 
-    <target name="jquery">
-        <copy todir='${jquery.dir}' file='${web.dir}/jquery/${jquery.version}/jquery.js' verbose='${sync.verbose}'/>
+    <!-- MODERNIZR Library -->
+    <target name="modernizr" depends="resolve">
+        <ivy:install organisation="org.webjars" module="modernizr" revision="${modernizr.version}" settingsRef="dev.settings" from="chain-resolver" to="build-tmp" overwrite="true" transitive="true" />
+
+        <unzip src="${build.tmp.dir}/modernizr-${modernizr.version}.jar" dest="${build.tmp.dir}/modernizr" overwrite="true" />
+
+        <copy todir="${3rdparty.dir}/modernizr">
+            <fileset dir="${build.tmp.dir}/modernizr/META-INF/resources/webjars/modernizr/${modernizr.version}" />
+        </copy>
     </target>
 
+    <!-- YUI Library -->
+    <target name="yui" depends="resolve">
+        <ivy:install organisation="com.yahoo.platform.yui" module="yui" revision="${yui.version}" settingsRef="dev.settings" from="chain-resolver" to="build-tmp" overwrite="true" transitive="true" type="zip" />
+
+        <unzip src="${build.tmp.dir}/yui-${yui.version}.zip" dest="${build.tmp.dir}" overwrite="true" />
+
+        <copy todir="${build.web.dir}/yui/${yui.version}">
+            <fileset dir="${build.tmp.dir}/yui" />
+        </copy>
+    </target>
 </project>
